primeira versao de lista de tarefas concluida

--- a/index.html
+++ b/index.html
@@ -12,11 +12,19 @@
         <section class="lista">
             <h2>Minhas Tarefas</h2>
             <div class="adicionar">
-                <input type="text" name="txt" id="itxt">
+                <input type="text" name="txt" id="itxt" placeholder="O que temos para hoje?">
                 <button type="submit" class="botao">Adicionar</button>
             </div>
-            <div class="item"> <i class="fa-solid fa-check" id="check"></i> exemplo <i class="fa-solid fa-xmark" id="delete"></i></div>
+
+            <!-- <div class="item">
+                <div class="texto">
+                    <button class="mark" id="check"><i class="fa-solid fa-check"></i></button>
+                    Exemplo
+                </div>
+                <button class="mark" id="delete"><i class="fa-solid fa-xmark"></i></button>
+            </div> -->
         </section>
     </main>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
